# SamvadAI

./: .env.example  .gitignore  README.md  complaints.json  index.html  pnpm-lock.yaml
ai-pipeline/: index.html
api-reference/: index.html
apps/api/: .env.example  db.sqlite3  pyproject.toml
apps/api/api/: settings.py  urls.py
apps/api/complaints/: api.py  models.py  schemas.py  tasks.py
apps/api/complaints/management/commands/: seed_complaints.py
apps/api/complaints/migrations/: 0001_initial.py  0002_alter_complaint_id.py
apps/api/complaints/pipeline/: graph.py  nodes.py  prompts.py
apps/web/: package-lock.json  package.json  vite.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/dashboard/: ai-insight-panel.tsx  command-center.tsx  complaint-list.tsx  header.tsx  index.ts  metric-cards.tsx  sidebar.tsx
apps/web/src/: App.tsx  index.css
apps/web/src/components/: ErrorBanner.tsx  SLATimer.tsx
apps/web/src/hooks/: useAnalysisStore.ts  useAnalytics.ts  useComplaintDetail.ts  useComplaints.ts  useDashboardData.ts
apps/web/src/layouts/: AppLayout.tsx
backend/: index.html
docs/: mkdocs.yml
docs/docs/: ai-pipeline.md  api-reference.md  backend.md  frontend.md  index.md  sitemap.md
frontend/: index.html
search/: search_index.json
shared/: package-lock.json  package.json  tsconfig.json
shared/src/: index.ts
shared/src/components/: ComplaintCard.tsx  PriorityBadge.tsx  SLATimer.tsx  StatusChip.tsx
shared/src/types/: complaint.ts
shared/src/utils/: sla.ts
sitemap/: index.html
(+15 files in other folders)
